--- a/src/components/AdminPendingLoans/AdminPendingLoans.scss
+++ b/src/components/AdminPendingLoans/AdminPendingLoans.scss
@@ -42,10 +42,18 @@
             @include flex(row, flex-start, center);
             font-style: italic;
             font-size: 1rem;
-            // gap: 3rem;
+            gap: 1rem;
             color: $primary-bg-color;
             margin-bottom: 0.5rem;
             margin-top: 3rem;
+            // S/N column takes less space
+            // &:first-child {
+            //     flex: 0.5;
+            // }
+        
+            // &:nth-child(1) {
+            //     flex: 1.5;
+            // }
         }
 
         @include desktop-breakpoint {
@@ -56,17 +64,29 @@
     }
 
     &-headd {
-        // S/N column takes less space
-        &:first-child {
-            flex: 0.5;
-        }
+        // // S/N column takes less space
+        // &:first-child {
+        //     flex: 0.5;
+        // }
     
-        &:nth-child(2) {
-            flex: 1.5;
-        }
+        // &:nth-child(2) {
+        //     flex: 1.5;
+        // }
 
         @include tablet-breakpoint {
-            width: 20%;
+            // width: 20%;
+            // gap: 1rem;
+            @include flex(column, center, flex-start);
+            width: 100%;
+
+            // S/N column takes less space
+            // &:first-child {
+            //     flex: 0.5;
+            // }
+        
+            // &:nth-child(1) {
+            //     flex: 1.5;
+            // }
         }
     }
 
@@ -90,13 +110,13 @@
         @include flex(column, center, center);
 
         // S/N column takes less space
-        &:first-child {
-            flex: 0.5;
-        }
+        // &:first-child {
+        //     flex: 0.5;
+        // }
     
-        &:nth-child(1) {
-            flex: 1.5;
-        }
+        // &:nth-child(1) {
+        //     flex: 1.5;
+        // }
 
         @include tablet-breakpoint {
             @include flex(column, center, flex-start);
@@ -128,13 +148,13 @@
         }
 
         // S/N column takes less space
-        &:first-child {
-            flex: 0.5;
-        }
+        // &:first-child {
+        //     flex: 0.5;
+        // }
 
-        &:nth-child(2) {
-            flex: 1.5;
-        }
+        // &:nth-child(2) {
+        //     flex: 1.5;
+        // }
     }
 
     &-no-loan {
