--- a/src/components/AdminPendingLoans/AdminPendingLoans.scss
+++ b/src/components/AdminPendingLoans/AdminPendingLoans.scss
@@ -206,5 +206,35 @@
                 font-size: 1.5rem;
             }
         }
+
+        // &-dropdown {
+        //     position: absolute;
+        //     background-color: $secondary-bg-color;
+        //     border: 1px solid $primary-bg-color;
+        //     border-radius: 4px;
+        //     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        //     z-index: 10;
+        //     margin-top: 5px;
+
+        //     &-option {
+        //         padding: 8px 12px;
+        //         cursor: pointer;
+        //         font-size: 1rem;
+        //         color: $primary-bg-color;
+        //         transition: background-color 0.3s ease;
+
+        //         &:hover {
+        //             background-color: lighten($secondary-bg-color, 10%);
+        //         }
+
+        //         @include tablet-breakpoint {
+        //             font-size: 1.35rem;
+        //         }
+
+        //         @include desktop-breakpoint {
+        //             font-size: 1.5rem;
+        //         }
+        //     }
+        // }
     }
 }
