--- a/src/components/AdminHistory/AdminHistory.scss
+++ b/src/components/AdminHistory/AdminHistory.scss
@@ -101,6 +101,7 @@
                     @include flex(row, flex-start, center);
                     padding: 2rem 2.5rem;
                     gap: 0;
+                    position: relative;
                 }
     
                 @include desktop-breakpoint {
@@ -163,11 +164,6 @@
                 width: 100%;
                 text-align: center;
                 transition: background-color 0.3s ease, border-color 0.3s ease;
-                // border: 2px solid red;
-
-                @include tablet-breakpoint {
-                    position: relative;
-                }
             
                 &:hover {
                     background-color: lighten($secondary-bg-color, 10%);
@@ -183,21 +179,22 @@
 
             &-dropdown {
                 @include flex(column, center, center);
-                // position: absolute;
                 background-color: $secondary-bg-color;
                 border: 1px solid $primary-bg-color;
                 border-radius: .5rem;
                 box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-                // z-index: 10;
-                // top: 1rem;
                 width: 60%;
-                // margin-bottom: .3125rem;
 
                 @include tablet-breakpoint {
-                    border: 2px solid red;
-                    display: block;
                     position: absolute;
-                    // @include flex(row, center, center)
+                    width: 15%;
+                    top: 5rem;
+                    z-index: 10;
+                    right: 2.5rem;
+                }
+
+                @include desktop-breakpoint {
+                    right: 4rem;
                 }
 
                 &-option {
@@ -205,10 +202,12 @@
                     cursor: pointer;
                     font-size: 1rem;
                     color: $primary-bg-color;
-                    transition: background-color 0.3s ease;
+                    @include flex(column, center, center);
 
                     &:hover {
                         background-color: lighten($secondary-bg-color, 10%);
+                        width: 100%;
+                        @include flex(column, center, center);
                     }
                 }
             }
