--- a/src/components/AdminPendingLoans/AdminPendingLoans.scss
+++ b/src/components/AdminPendingLoans/AdminPendingLoans.scss
@@ -94,6 +94,7 @@
         @include flex(column, center, center);
         gap: 1rem;
         color: $primary-bg-color;
+        margin-top: 2rem;
 
         @include tablet-breakpoint {
             @include flex(row, center, center);
@@ -227,7 +228,7 @@
         // position: absolute;
         // background-color: $secondary-bg-color;
         border: 1px solid $primary-bg-color;
-        border-radius: 4px;
+        border-radius: .5rem;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         z-index: 10;
         width: 150px;
@@ -238,20 +239,20 @@
         @include tablet-breakpoint {
             position: absolute;
             // width: 20%;
-            bottom: 3rem;
+            bottom: 1.5rem;
             z-index: 10;
             right: 40px;
         }
 
         @include desktop-breakpoint {
             right: 120px;
-            bottom: 1rem;
+            bottom: -0.5rem;
         }
 
         &:hover {
             background-color: $secondary-bg-color;
             color: $primary-bg-color;
-            width: 100%;
+            // width: 100%;
         }
 
         &-option {
