--- a/src/styles/partials/_globals.scss
+++ b/src/styles/partials/_globals.scss
@@ -16,6 +16,10 @@ body {
     // transition: all 2s ease-in-out;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 a {
     text-decoration: none;
     color: inherit;
