--- a/src/components/AdminPendingLoans/AdminPendingLoans.scss
+++ b/src/components/AdminPendingLoans/AdminPendingLoans.scss
@@ -4,14 +4,12 @@
 .admin-pend {
     margin-top: 1.5rem;
     padding: 1.5rem 1rem;
-    // height: 38vh;
     background-color: $secondary-bg-color;
 
     @include tablet-breakpoint {
         padding-left: 2.5rem;
         padding-right: 2.5rem;
         padding-bottom: 5rem;
-        // height: 45vh;
     }
 
     @include desktop-breakpoint {
@@ -46,14 +44,6 @@
             color: $primary-bg-color;
             margin-bottom: 0.5rem;
             margin-top: 3rem;
-            // S/N column takes less space
-            // &:first-child {
-            //     flex: 0.5;
-            // }
-        
-            // &:nth-child(1) {
-            //     flex: 1.5;
-            // }
         }
 
         @include desktop-breakpoint {
@@ -64,29 +54,10 @@
     }
 
     &-headd {
-        // // S/N column takes less space
-        // &:first-child {
-        //     flex: 0.5;
-        // }
-    
-        // &:nth-child(2) {
-        //     flex: 1.5;
-        // }
 
         @include tablet-breakpoint {
-            // width: 20%;
-            // gap: 1rem;
             @include flex(column, center, flex-start);
             width: 100%;
-
-            // S/N column takes less space
-            // &:first-child {
-            //     flex: 0.5;
-            // }
-        
-            // &:nth-child(1) {
-            //     flex: 1.5;
-            // }
         }
     }
 
@@ -98,7 +69,6 @@
 
         @include tablet-breakpoint {
             @include flex(row, center, center);
-            // gap: 3rem;
         }
 
         @include desktop-breakpoint {
@@ -109,15 +79,6 @@
 
     &-box {
         @include flex(column, center, center);
-
-        // S/N column takes less space
-        // &:first-child {
-        //     flex: 0.5;
-        // }
-    
-        // &:nth-child(1) {
-        //     flex: 1.5;
-        // }
 
         @include tablet-breakpoint {
             @include flex(column, center, flex-start);
@@ -147,15 +108,6 @@
         @include desktop-breakpoint {
             font-size: 2rem;
         }
-
-        // S/N column takes less space
-        // &:first-child {
-        //     flex: 0.5;
-        // }
-
-        // &:nth-child(2) {
-        //     flex: 1.5;
-        // }
 
         &--name {
             font-weight: 300;
@@ -225,34 +177,29 @@
     }
 
     &-dropdown {
-        // position: absolute;
-        // background-color: $secondary-bg-color;
         border: 1px solid $primary-bg-color;
         border-radius: .5rem;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         z-index: 10;
         width: 150px;
-        // width: 50%;
         @include flex(column, center, center);
 
 
         @include tablet-breakpoint {
             position: absolute;
-            // width: 20%;
-            bottom: 1.5rem;
+            bottom: 55px;
             z-index: 10;
             right: 40px;
         }
 
         @include desktop-breakpoint {
             right: 120px;
-            bottom: -0.5rem;
+            bottom: 35px;
         }
 
         &:hover {
             background-color: $secondary-bg-color;
             color: $primary-bg-color;
-            // width: 100%;
         }
 
         &-option {
@@ -262,10 +209,8 @@
             width: 100%;
             @include flex(row, center, center);
             font-weight: 700;
-            // color: $primary-bg-color;
             color: $secondary-bg-color;
             background-color: $primary-bg-color;
-            // transition: background-color 0.3s ease;
 
             &:hover {
                 background-color: $secondary-bg-color;
@@ -274,11 +219,11 @@
             }
 
             @include tablet-breakpoint {
-                font-size: 1.35rem;
+                font-size: 1rem;
             }
 
             @include desktop-breakpoint {
-                font-size: 1.5rem;
+                font-size: 1rem;
             }
         }
     }
