--- a/src/components/AdminPendingLoans/AdminPendingLoans.scss
+++ b/src/components/AdminPendingLoans/AdminPendingLoans.scss
@@ -174,6 +174,7 @@
         width: 150px;
         margin-top: 0.2rem;
         margin-bottom: 0;
+        cursor: pointer;
     }
 
     &-dropdown {
