--- a/src/components/UsersDetails/UsersDetails.scss
+++ b/src/components/UsersDetails/UsersDetails.scss
@@ -6,7 +6,7 @@
     padding: 1rem 0;
 
     @include tablet-breakpoint {
-        margin: 1.5rem 2.5rem 5rem;
+        margin: 1.5rem 0 5rem;
         padding: 0;
     }
 
@@ -101,6 +101,8 @@
 
             @include tablet-breakpoint {
                 margin-bottom: 0rem;
+                margin-left: 2.5rem;
+                margin-right: 2.5rem;
             }
 
             @include desktop-breakpoint {
@@ -108,13 +110,42 @@
             }
         }
 
+        &-headers {
+            display: none;
+
+            @include tablet-breakpoint {
+                @include flex(row, flex-start, flex-start);
+                // @include flex(column, flex-start, flex-start);
+                width: 100%;
+                margin: 2rem 2.5rem 1rem 2.5rem;
+                // border: 2px solid red;
+                // gap: 3.5rem;
+            }
+        }
+
+        &-header {
+            @include tablet-breakpoint {
+                // border: 2px solid blue;
+                width: 15%;
+                font-size: 1.2rem;
+            }
+
+            @include desktop-breakpoint {
+                // width: 15%;
+                // gap: 10rem;
+                // @include flex(row, center, center);
+            }
+        }
+
         &-item {
             @include flex(column, flex-start, flex-start);
-            border-bottom: 1px solid $secondary-bg-color;
+            border-top: 1px solid $secondary-bg-color;
             padding: 1.5rem 0;
 
             @include tablet-breakpoint {
-                @include flex(column, flex-start, flex-start);
+                @include flex(row, flex-start, flex-start);
+                                padding-left: 2.5rem;
+                                padding-right: 2.5rem;
             }
         }
 
@@ -122,6 +153,11 @@
             @include flex(row, flex-start, center);
             width: 100%;
             gap: 2rem;
+
+            @include tablet-breakpoint {
+                @include flex(column, flex-start, flex-start);
+                gap: 0.5rem;
+            }
         }
 
         &-label {
@@ -130,12 +166,14 @@
             width: 25%;
 
             @include tablet-breakpoint {
-                width: 10%
+                display: none;
+                // width: 10%;
+                // font-weight: 100;
             }
 
-            @include desktop-breakpoint {
-                font-size: 1.2rem;
-            }
+            // @include desktop-breakpoint {
+            //     font-size: 1.2rem;
+            // }
         }
 
         &-text {
@@ -145,7 +183,9 @@
             width: 75%;
 
             @include tablet-breakpoint {
-                width: 90%
+                width: 100%;
+                font-weight: 400;
+                font-size: 1rem;
             }
         }
     }
