--- a/src/components/UsersDetails/UsersDetails.scss
+++ b/src/components/UsersDetails/UsersDetails.scss
@@ -11,7 +11,7 @@
     }
 
     @include desktop-breakpoint {
-        padding: 2rem 0 3rem 0;
+        padding: 0 0 3rem 0;
     }
 
     &__header {
@@ -103,10 +103,11 @@
                 margin-bottom: 0rem;
                 margin-left: 2.5rem;
                 margin-right: 2.5rem;
+                font-size: 1.9rem;
             }
 
             @include desktop-breakpoint {
-                font-size: 1.8rem;
+                font-size: 2.2rem;
             }
         }
 
@@ -118,6 +119,8 @@
                 // @include flex(column, flex-start, flex-start);
                 width: 100%;
                 margin: 2rem 2.5rem 1rem 2.5rem;
+                // font-weight: 100;
+                color: $secondary-bg-color;
                 // border: 2px solid red;
                 // gap: 3.5rem;
             }
@@ -131,7 +134,7 @@
             }
 
             @include desktop-breakpoint {
-                // width: 15%;
+                width: 16%;
                 // gap: 10rem;
                 // @include flex(row, center, center);
             }
@@ -184,7 +187,7 @@
 
             @include tablet-breakpoint {
                 width: 100%;
-                font-weight: 400;
+                font-weight: 300;
                 font-size: 1rem;
             }
         }
