--- a/src/components/AdminPendingLoans/AdminPendingLoans.scss
+++ b/src/components/AdminPendingLoans/AdminPendingLoans.scss
@@ -177,7 +177,7 @@
 
     &-box-input {
         border: 2px solid red;
-        align-self: center;
+        // align-self: center;
         // position: relative;
         @include flex(row, center, center);
         padding: 0.625rem 0rem 0.625rem 2.5rem;
@@ -194,7 +194,6 @@
 
     &-dropdown {
         border: 1px solid $primary-bg-color;
-        border-radius: .5rem;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         z-index: 10;
         width: 150px;
@@ -209,7 +208,7 @@
         }
 
         @include desktop-breakpoint {
-            right: 50px;
+            right: 110px;
         }
 
         &:hover {
